using/src/snapshots/using__schema__tests__it_can_load_using_with_a_different_prefix.snap
---
source: using/src/schema.rs
expression: "{\n    let schema =\n        Schema::parse(r#\"\n            schema\n                @req(using: \"https://lib.apollo.dev/core/v0.1\", as: \"req\")\n                @req(using: \"https://spec.example.com/A/v1.0\")\n                @core(using: \"https://spec.example.com/B/v2.2\")\n                {\n                    query: Query\n                }\n        \"#)?;\n    (schema.errors, schema.using)\n}"
---
(
    [],
    [
        Request {
            spec: Spec {
                identity: "https://lib.apollo.dev/core",
                name: "core",
                version: Version(
                    0,
                    1,
                ),
            },
            name: "req",
            position: Pos(3:17),
        },
        Request {
            spec: Spec {
                identity: "https://spec.example.com/A",
                name: "A",
                version: Version(
                    1,
                    0,
                ),
            },
            name: "A",
            position: Pos(4:17),
        },
    ],
)
