using/src/snapshots/using__schema__tests__it_iterates_over_activations.snap
---
source: using/src/schema.rs
expression: "{\n    let implementations =\n        Implementations::new().provide(\"https://spec.example.com/A\", (1, 2),\n                                       \"impl A v1.2\".to_owned()).provide(\"https://spec.example.com/B\",\n                                                                         (1,\n                                                                          2),\n                                                                         \"impl B v1.2\".to_owned());\n    let schema =\n        Schema::parse(r#\"\n                schema\n                    @core(using: \"https://lib.apollo.dev/core/v0.1\")\n                    @core(using: \"https://spec.example.com/A/v1.0\")\n                    @core(using: \"https://spec.example.com/unknown/v1.0\")\n                {\n                    query: Query\n                }\n                \"#)?;\n    let activations =\n        schema.activations(&implementations).map(|(req, find)|\n                                                     (req,\n                                                      find.collect::<Vec<_>>())).collect::<Vec<_>>();\n    format!(\"{:#?}\", activations)\n}"
---
[
    (
        Request {
            spec: Spec {
                identity: "https://lib.apollo.dev/core",
                name: "core",
                version: Version(
                    0,
                    1,
                ),
            },
            name: "core",
            position: Pos(3:21),
        },
        [],
    ),
    (
        Request {
            spec: Spec {
                identity: "https://spec.example.com/A",
                name: "A",
                version: Version(
                    1,
                    0,
                ),
            },
            name: "A",
            position: Pos(4:21),
        },
        [
            (
                Version(
                    1,
                    2,
                ),
                "impl A v1.2",
            ),
        ],
    ),
    (
        Request {
            spec: Spec {
                identity: "https://spec.example.com/unknown",
                name: "unknown",
                version: Version(
                    1,
                    0,
                ),
            },
            name: "unknown",
            position: Pos(5:21),
        },
        [],
    ),
]
